# GraphicsProg

GP1_DirectX_Starter/project/: CMakeLists.txt
GP1_DirectX_Starter/project/resources/: BaseShader.fx  OpaqueShader.fx  PartialCoverage.fx  PosCol3D.fx
GP1_DirectX_Starter/project/src/: Camara.cpp  Camara.h  Camera.cpp  Camera.h  Effect.cpp  Effect.h  EffectBase.cpp  EffectBase.h  EffectOpaque.cpp  EffectOpaque.h  EffectPartialCoverage.cpp  EffectPartialCoverage.h  Matrix.cpp  Matrix.h  Mesh.cpp  Mesh.h  MeshDirectX.cpp  MeshDirectX.h  MeshSoftware.cpp  MeshSoftware.h  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h  Utils.h  main.cpp  pch.h
GP1_Rasterizer_Starter/: CMakeLists.txt
GP1_Rasterizer_Starter/GP1_Rasterizer_Starter/: CMakeSettings.json
GP1_Rasterizer_Starter/GP1_Rasterizer_Starter/project/src/: main.cpp
GP1_Rasterizer_Starter/project/: CMakeLists.txt
GP1_Rasterizer_Starter/project/libs/SDL2-2.30.7/include/: SDL.h  SDL_assert.h  SDL_atomic.h  SDL_audio.h  SDL_blendmode.h  SDL_clipboard.h  SDL_config.h  SDL_cpuinfo.h  SDL_endian.h  SDL_error.h  SDL_events.h  SDL_filesystem.h  SDL_gamecontroller.h  SDL_gesture.h  SDL_guid.h  SDL_haptic.h  SDL_hidapi.h  SDL_hints.h  SDL_joystick.h  SDL_keyboard.h  SDL_keycode.h  SDL_loadso.h  SDL_locale.h  SDL_log.h  SDL_main.h  SDL_messagebox.h  SDL_metal.h  SDL_misc.h  SDL_mouse.h  SDL_mutex.h  SDL_pixels.h  SDL_platform.h  SDL_power.h  SDL_quit.h  SDL_rect.h  SDL_render.h  SDL_rwops.h  SDL_scancode.h  SDL_sensor.h  SDL_shape.h  (+10 more)
GP1_Rasterizer_Starter/project/src/: Camera.h  ColorRGB.h  DataTypes.h  Matrix.cpp  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h  main.cpp
GP1_Raytracer_Bouke_Weel_2DAE11/: CMakeLists.txt
GP1_Raytracer_Bouke_Weel_2DAE11/project/: CMakeLists.txt
GP1_Raytracer_Bouke_Weel_2DAE11/project/src/: Camera.h  Matrix.cpp  Renderer.cpp  Scene.cpp  Scene.h  Scene_W2.cpp  Scene_W3.cpp  Scene_W3.h  Scene_W4.cpp  Scene_W4.h  Utils.h  Vector3.cpp  Vector4.cpp  main.cpp
GP1_Raytracer_FirstName_LastName_2DAExx/project/: CMakeLists.txt
GP1_Raytracer_FirstName_LastName_2DAExx/project/src/: BRDFs.h  Camera.h  ColorRGB.h  DataTypes.h  Material.h  Matrix.cpp  Renderer.cpp  Renderer.h  Scene.cpp  Scene_W2.h  Scene_W3.cpp  Scene_W4.cpp  Scene_W4.h  Utils.h  Vector3.cpp  Vector3.h  Vector4.cpp  main.cpp
